--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/css/normalize.css">
+        <link rel="stylesheet" href="css/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -20,18 +20,56 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        
+            <div id="landing-hero" class="hero dark">
+                <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and Crows Supporter</h1>
+                <p class="autoscroll">Scroll down for more</p>
+            </div>
+            <div class="nav">
+                    <p>Latest Projects</p>
+                </div>
+            <div class="wrapper">
+                <div class="content">
+                    <h2>Matthew Stobo is a cool guy</h2>
+                </div>
+                <div class="projects">
+
+                </div>
+                <div class="content">
+
+                </div>
+                <div class="content">
+
+                </div>
+                <div class="content">
+
+                </div>
+            </div>
+            <footer class="footer">
+                <p>
+
+                </p>
+            </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!--- End content --> 
         <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     </body>
 </html>
