Added content panels // project panels

--- a/index.html
+++ b/index.html
@@ -1,75 +1,117 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/css/normalize.css">
-        <link rel="stylesheet" href="css/css/main.css">
-    </head>
-    <body>
-        <!--[if lte IE 9]>
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="css/css/normalize.css">
+    <link rel="stylesheet" href="css/css/main.css">
+</head>
+
+<body>
+    <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        
-            <div id="landing-hero" class="hero dark">
-                <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and Crows Supporter</h1>
-                <p class="autoscroll">Scroll down for more</p>
+    <!-- Add your site or application content here -->
+
+    <div id="landing-hero" class="hero dark">
+        <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and Crows
+            Supporter
+        </h1>
+        <p class="autoscroll">Scroll down for more</p>
+    </div>
+    <div class="nav">
+        <p>Latest Projects</p>
+    </div>
+    <div class="wrapper">
+        <div class="content blue">
+            <h3>Matthew Stobo is a cool guy
+            </h3>
+            <p>
+                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.<br/>                He is adept at evolving a business need or goal into a technical solution or strategy, from inception to
+                delivery.
+            </p>
+        </div>
+        <div class="projects">
+            <h3>Matthew Stobo makes things happen</h3>
+            <div class="project-wrapper">
+                <div class="project-item">
+                    <p>Lauchlan Craig</p>
+                    <p>Design Portfolio</p>
+                </div>
+                <div class="project-item">
+                    <p>Traverse</p>
+                    <p>Personal Project</p>
+                </div>
             </div>
-            <div class="nav">
-                    <p>Latest Projects</p>
-                </div>
-            <div class="wrapper">
-                <div class="content">
-                    <h2>Matthew Stobo is a cool guy</h2>
-                </div>
-                <div class="projects">
+        </div>
+        <div class="content grey">
+            <h3>Matthew Stobo has the skills </h3>
+            <h3>Employment</h3>
+            <p>
+                Digital Producer<br/> Get Started<br/><br/> Technical project and account management. Responsible for management
+                of digital projects and strategies from requirements gathering and analysis, to development and production.
+                Highly autonomous role across multiple clients, projects and technologies.
+            </p>
+        </div>
+        <div class="content blue">
+            <h3>Education</h3>
+            <p>
+                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
+                <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
+                to delivery.
+            </p>
+        </div>
+        <div class="content white">
+            <h3>Skills & Technologies</h3>
+            <p>
+                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
+                <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
+                to delivery.
+            </p>
+        </div>
+    </div>
+    <footer class="footer">
+        <p>
 
-                </div>
-                <div class="content">
-
-                </div>
-                <div class="content">
-
-                </div>
-                <div class="content">
-
-                </div>
-            </div>
-            <footer class="footer">
-                <p>
-
-                </p>
-            </footer>
-
-
-
-
-
-
-
-
-
-
-
+        </p>
+    </footer>
 
 
 
 
-        <!--- End content --> 
-        <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-        <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+
+
+
+
+
+
+
+
+
+
+
+    <!--- End content -->
+    <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
+    <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')
+
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
 </html>
