Added images // added .date class // updated spacing

--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
             <h3>Matthew Stobo makes things happen</h3>
             <div class="project-wrapper">
                 <div class="project-item">
+                    <img src="img/04.jpg">
                     <p>Lauchlan Craig</p>
                     <p>Design Portfolio</p>
                 </div>
                 <div class="project-item">
+                    <img src="img/02.jpg">
                     <p>Traverse</p>
                     <p>Personal Project</p>
                 </div>
@@ -63,6 +65,7 @@
                 of digital projects and strategies from requirements gathering and analysis, to development and production.
                 Highly autonomous role across multiple clients, projects and technologies.
             </p>
+            <p class="date">Feb 2016 - present.</p>
         </div>
         <div class="content blue">
             <h3>Education</h3>
@@ -72,6 +75,7 @@
                 <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
                 to delivery.
             </p>
+            <p class="date">Feb 2013 - Feb 2016</p>
         </div>
         <div class="content white">
             <h3>Skills & Technologies</h3>
