added onClick scroll, navbar, sticky header

--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
         <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and Crows
             Supporter
         </h1>
-        <p class="autoscroll">Scroll down for more</p>
+        <a class="autoscroll" href="#">&darr; &darr; &darr;</a>
     </div>
-    <div class="nav">
-        <p>Latest Projects</p>
-    </div>
+    <nav>
+        <div class="navbar">
+            <a href="/archive">Latest Projects</a>
+                    <a href="/events">Information</a>
+                    <a href="/contact">Resume</a>
+                    <a href="/contact">Contact</a>
+                    <span>: D</span>
+                </div>
+        
+  </nav>
     <div class="wrapper">
         <div class="content blue">
             <h3>Matthew Stobo is a cool guy
@@ -94,22 +101,8 @@
     </footer>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!--- End content -->
-    <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-    <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')
 
