Added typed.js, webpack

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <!-- Add your site or application content here -->
 
     <div id="landing-hero" class="hero dark">
-        <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and Crows
-            Supporter
+        <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and <span class="typed"></span>
         </h1>
         <a class="autoscroll" href="#">&darr; &darr; &darr;</a>
     </div>
@@ -108,7 +107,7 @@
 
     </script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="dist/index.js"></script>
 </body>
 
 </html>
