--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/css/normalize.css">
     <link rel="stylesheet" href="css/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:600" rel="stylesheet">
 </head>
 
 <body>
@@ -40,6 +41,7 @@
   </nav>
     <div class="wrapper">
         <div class="content blue">
+            <div class="left">
             <h3>Matthew Stobo is a cool guy
             </h3>
             <p>
@@ -47,6 +49,7 @@
                 abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.<br/>                He is adept at evolving a business need or goal into a technical solution or strategy, from inception to
                 delivery.
             </p>
+        </div>
         </div>
         <div class="projects">
             <h3>Matthew Stobo makes things happen</h3>
@@ -64,6 +67,7 @@
             </div>
         </div>
         <div class="content grey">
+            <div class="left">
             <h3>Matthew Stobo has the skills </h3>
             <h3>Employment</h3>
             <p>
@@ -71,9 +75,13 @@
                 of digital projects and strategies from requirements gathering and analysis, to development and production.
                 Highly autonomous role across multiple clients, projects and technologies.
             </p>
+        </div>
+        <div class="right">
             <p class="date">Feb 2016 - present.</p>
         </div>
+        </div>
         <div class="content blue">
+                <div class="left">
             <h3>Education</h3>
             <p>
                 Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
@@ -81,9 +89,13 @@
                 <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
                 to delivery.
             </p>
+            </div>
+            <div class="right">
             <p class="date">Feb 2013 - Feb 2016</p>
+            </div>
         </div>
         <div class="content white">
+            <div class="left">
             <h3>Skills & Technologies</h3>
             <p>
                 Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
@@ -91,6 +103,7 @@
                 <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
                 to delivery.
             </p>
+        </div>
         </div>
     </div>
     <footer class="footer">
