--- a/index.html
+++ b/index.html
@@ -25,31 +25,35 @@
     <!-- Add your site or application content here -->
 
     <div id="landing-hero" class="hero dark">
-        <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and <span class="typed"></span>
+        <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and
+            <span
+                class="typed"></span>
         </h1>
         <a class="autoscroll" href="#">&darr; &darr; &darr;</a>
     </div>
     <nav>
         <div class="navbar">
-            <a href="/archive">Latest Projects</a>
-                    <a href="/events">Information</a>
-                    <a href="/contact">Resume</a>
-                    <a href="/contact">Contact</a>
-                    <span>: D</span>
-                </div>
-        
-  </nav>
+            <a href="#projects">Latest Projects</a>
+            <a href="#information">Information</a>
+            <a href="#experience">Resume</a>
+            <a href="#contact">Contact</a>
+            <span>: D</span>
+        </div>
+
+    </nav>
     <div class="wrapper">
         <div class="content blue">
             <div class="left">
-            <h3>Matthew Stobo is a cool guy
-            </h3>
-            <p>
-                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
-                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.<br/>                He is adept at evolving a business need or goal into a technical solution or strategy, from inception to
-                delivery.
-            </p>
-        </div>
+                <h3>Matthew Stobo is a cool guy
+                </h3>
+                <p>
+                    Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                    abilities and project leadership experience; as comfortable in the meeting room as in front of a code
+                    editor.<br/> He is adept at evolving a business need or goal into a technical solution
+                    or strategy, from inception to delivery.
+                </p>
+            </div>
+            <hr class="border" />
         </div>
         <div class="projects">
             <h3>Matthew Stobo makes things happen</h3>
@@ -65,52 +69,62 @@
                     <p>Personal Project</p>
                 </div>
             </div>
+            <hr class="border proj" />
         </div>
         <div class="content grey">
             <div class="left">
-            <h3>Matthew Stobo has the skills </h3>
-            <h3>Employment</h3>
-            <p>
-                Digital Producer<br/> Get Started<br/><br/> Technical project and account management. Responsible for management
-                of digital projects and strategies from requirements gathering and analysis, to development and production.
-                Highly autonomous role across multiple clients, projects and technologies.
-            </p>
-        </div>
-        <div class="right">
-            <p class="date">Feb 2016 - present.</p>
-        </div>
-        </div>
-        <div class="content blue">
-                <div class="left">
-            <h3>Education</h3>
-            <p>
-                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
-                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
-                <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
-                to delivery.
-            </p>
+                <h3>Matthew Stobo has the skills </h3>
+                <h3>Employment</h3>
+                <p>
+                    Digital Producer<br/> Get Started<br/><br/> Technical project and account management. Responsible for
+                    management of digital projects and strategies from requirements gathering and analysis, to development
+                    and production. Highly autonomous role across multiple clients, projects and technologies.
+                </p>
             </div>
             <div class="right">
-            <p class="date">Feb 2013 - Feb 2016</p>
+                <p class="date">Feb 2016 - present.</p>
             </div>
         </div>
+        <div class="content blue">
+            <h3>Education</h3>
+            <p class="date">Feb 2013 - Feb 2016</p>
+            <p>
+                Bachelor of Information Technology and Systems<br> Monash University<br><br> Major in Application Development,
+                minor in Information and Communication Technologies (ICT)
+            </p>
+            <p class="date">Mar 2010 - Jan 2012</p>
+            <p>
+                Bachelor of Arts (International Studies)<br> Deakin University<br><br> Major in International Relations,minor
+                in Middle Eastern Studies<br> (DEFERRED)
+                <br>
+            </p><br><br>
+            <hr class="border edu" />
+            <hr class="border skills" />
+        </div>
         <div class="content white">
-            <div class="left">
             <h3>Skills & Technologies</h3>
             <p>
-                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
-                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
-                <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
-                to delivery.
+                Languages​ ​/​ ​Methodologies<br><br> Java, C# , PHP, HTML5<br> Javascript, CSS3, SQL, Ruby
             </p>
-        </div>
-        </div>
-    </div>
-    <footer class="footer">
-        <p>
 
-        </p>
-    </footer>
+            <p> Libraries​ ​and​ ​Frameworks<br><br> ASP.NET Core, Android, CakePHP, Laravel, Selenium, jQuery, Cucumber / SpecFlow,
+                MySQL
+            </p>
+            <p>Tools<br><br> Unix CLI, Nginx, Git, Webpack, Visual Studio, Docker, phpMyAdmin, LoadImpact
+            </p><br><br>
+            <hr class="border foot" />
+        </div>
+        <footer class="footer">
+            <h3>Contact Me</h3>
+            <p>
+                <a href="mailto:mjstobo@gmail.com">mjstobo@gmail.com</a><br><br>
+                <a href="tel:0403275041">0403 275 041</a><br><br>
+                <a href="https://au.linkedin.com/in/mjstobo">LinkedIn</a><br>
+            </p>
+            <p class="copyright">Designed with love by<a href="http://www.lauchlancraig.com"> Studio Craig</a>, built by yours truly.</p>
+        </footer>
+    </div>
+
 
 
     <!--- End content -->
