--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
     <div id="landing-hero" class="hero dark">
         <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and
-            <span
-                class="typed"></span>
+            <span class="typed"></span>
         </h1>
         <a class="autoscroll" href="#">&darr; &darr; &darr;</a>
     </div>
     <nav>
         <div class="navbar">
-            <a href="#projects">Latest Projects</a>
-            <a href="#information">Information</a>
-            <a href="#experience">Resume</a>
+            <a href="#projects">Projects</a>
+            <a href="#experience">Experience</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
             <span>: D</span>
         </div>
@@ -43,32 +43,42 @@
     </nav>
     <div class="wrapper">
         <div class="content blue">
-                <h3>Matthew Stobo is a cool guy
-                </h3>
-                <p>
-                    Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
-                    abilities and project leadership experience; as comfortable in the meeting room as in front of a code
-                    editor.<br/> He is adept at evolving a business need or goal into a technical solution
-                    or strategy, from inception to delivery.
-                </p>
+            <h3>Matthew Stobo is a cool guy
+            </h3>
+            <p>
+                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
+                <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
+                to delivery.
+            </p>
             <hr class="border" />
         </div>
+        <span id="projects" class="anchor"></span>
         <div class="projects">
             <h3>Matthew Stobo makes things happen</h3>
             <div class="project-wrapper">
                 <div class="project-item">
-                    <img src="img/04.jpg">
-                    <p>Lauchlan Craig</p>
-                    <p>Design Portfolio</p>
+                    <div class="project-image">
+                        <img src="img/04.jpg">
+                    </div>
+                    <div class="project-text">
+                        <p>Lauchlan Craig<br> Design Portfolio</p>
+                        <a id="first-proj" href="#" class="expand"><img src="./plus.png"></a>
+                    </div>
                 </div>
                 <div class="project-item">
-                    <img src="img/02.jpg">
-                    <p>Traverse</p>
-                    <p>Personal Project</p>
+                    <div class="project-image">
+                        <img src="img/02.jpg">
+                    </div>
+                    <div class="project-text">
+                        <p>Traverse<br> Personal Project</p>
+                        <a id="second-proj" href="#" class="expand"><img src="./plus.png"></a>
+                    </div>
                 </div>
             </div>
             <hr class="border proj" />
         </div>
+        <span id="experience" class="anchor"></span>
         <div class="content grey">
             <div class="left">
                 <h3>Matthew Stobo has the skills </h3>
@@ -83,6 +93,7 @@
                 <p class="date">Feb 2016 - present.</p>
             </div>
         </div>
+        <span id="education" class="anchor"></span>
         <div class="content blue">
             <h3>Education</h3>
             <p class="date">Feb 2013 - Feb 2016</p>
@@ -99,6 +110,7 @@
             <hr class="border edu" />
             <hr class="border skills" />
         </div>
+        <span id="skills" class="anchor"></span>
         <div class="content white">
             <h3>Skills & Technologies</h3>
             <p>
@@ -112,6 +124,7 @@
             </p><br><br>
             <hr class="border foot" />
         </div>
+        <span id="contact" class="anchor"></span>
         <footer class="footer">
             <h3>Contact Me</h3>
             <p>
