Added expand / collapse panel // updated responsive breakpoints // added JS for scrolling (incomplete)

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
     <nav>
         <div class="navbar">
-            <a href="#projects">Projects</a>
-            <a href="#experience">Experience</a>
-            <a href="#education">Education</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
+            <a href="#projects" id="#proj-nav">Projects</a>
+            <a href="#experience" id="#exp-nav">Experience</a>
+            <a href="#education" id="#edu-nav">Education</a>
+            <a href="#skills" id="#skills-nav">Skills</a>
+            <a href="#contact" id="#con-nav">Contact</a>
             <span>: D</span>
         </div>
 
@@ -63,7 +63,13 @@
                     </div>
                     <div class="project-text">
                         <p>Lauchlan Craig<br> Design Portfolio</p>
-                        <a id="first-proj" href="#" class="expand"><img src="./plus.png"></a>
+                        <span id="first-proj" class="expand"><img src="./plus.png"></span>
+                        <div class="proj-expand inactive">
+                            <p class="proj-text">
+                                A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple, yet elegant.
+                            </p>
+                            <button class="cta" href="http://www.lauchlancraig.com/wip/">Visit Project</button>
+                        </div>
                     </div>
                 </div>
                 <div class="project-item">
@@ -72,7 +78,13 @@
                     </div>
                     <div class="project-text">
                         <p>Traverse<br> Personal Project</p>
-                        <a id="second-proj" href="#" class="expand"><img src="./plus.png"></a>
+                        <span id="second-proj" href="#" class="expand"><img src="./plus.png"></span>
+                        <div class="proj-expand inactive">
+                                <p class="proj-text">
+                                    A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple, yet elegant.
+                                </p>
+                                <button class="cta" href="http://www.lauchlancraig.com/wip/">Visit Project</button>
+                            </div>
                     </div>
                 </div>
             </div>
