Updated colours // add LC site image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="project-wrapper">
                 <div class="project-item">
                     <div class="project-image">
-                        <img src="img/04.jpg">
+                        <img src="img/lc.png">
                     </div>
                     <div class="project-text">
                         <p>Lauchlan Craig<br> Design Portfolio</p>
