--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and
             <span class="typed"></span>
         </h1>
-        <a class="autoscroll" href="#">&darr; &darr; &darr;</a>
+        <a class="autoscroll" href="#">&darr; &nbsp; &darr;</a>
     </div>
     <nav>
         <div class="navbar">
@@ -46,10 +46,8 @@
             <h3>Matthew Stobo is a cool guy
             </h3>
             <p>
-                Matthew’s passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                My passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
                 abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
-                <br/> He is adept at evolving a business need or goal into a technical solution or strategy, from inception
-                to delivery.
             </p>
             <hr class="border" />
         </div>
@@ -66,7 +64,7 @@
                         <span id="first-proj" class="expand"><img src="./plus.png"></span>
                         <div class="proj-expand inactive">
                             <p class="proj-text">
-                                A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple, yet elegant.
+                                A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple.
                             </p>
                             <button class="cta" href="http://www.lauchlancraig.com/wip/">Visit Project</button>
                         </div>
@@ -141,7 +139,6 @@
             <h3>Contact Me</h3>
             <p>
                 <a href="mailto:mjstobo@gmail.com">mjstobo@gmail.com</a><br><br>
-                <a href="tel:0403275041">0403 275 041</a><br><br>
                 <a href="https://au.linkedin.com/in/mjstobo">LinkedIn</a><br>
             </p>
             <p class="copyright">Designed with love by<a href="http://www.lauchlancraig.com"> Studio Craig</a>, built by yours truly.</p>
