updated JS. Restored colours.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="project-text">
                         <p>Lauchlan Craig<br> Design Portfolio</p>
-                        <span id="first-proj" class="expand"><img src="./plus.png"></span>
+                        <span id="first-proj" class="expand"><img class="icon-expand" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                             <p class="proj-text">
                                 A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple, yet elegant.
@@ -78,7 +78,7 @@
                     </div>
                     <div class="project-text">
                         <p>Traverse<br> Personal Project</p>
-                        <span id="second-proj" href="#" class="expand"><img src="./plus.png"></span>
+                        <span id="second-proj" href="#" class="expand"><img class="icon-expand" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
                                     A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple, yet elegant.
