Added HTML changes. Removed some css changes. Will merge future changes.

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
                             <p class="proj-text">
                                 A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple.
                             </p>
-                            <button class="cta" href="http://www.lauchlancraig.com/wip/">Visit Project</button>
+                            <button class="cta" href="http://www.lauchlancraig.com/">Visit Project</button>
                         </div>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-image">
-                        <img src="img/02.jpg">
+                        <img src="img/moon.png">
                     </div>
                     <div class="project-text">
-                        <p>Traverse<br> Personal Project</p>
+                        <p>Moon Digital<br> Personal Project</p>
                         <span id="second-proj" href="#" class="expand"><img src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
-                                    A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple, yet elegant.
+                                    Simple, single pager for a pretend Digital Agency. Built with Flexbox, modular SCSS and some React components sprinkled in.
                                 </p>
-                                <button class="cta" href="http://www.lauchlancraig.com/wip/">Visit Project</button>
+                                <button class="cta" href="http://www.mjstobo.com/moondigital">Visit Project</button>
                             </div>
                     </div>
                 </div>
