Added transitions to proj-expand. Changed to height 0 / opacity 0 as workaround to display property.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="project-text">
                         <p>Lauchlan Craig<br> Design Portfolio</p>
-                        <span id="first-proj" class="expand"><img src="./plus.png"></span>
+                        <span id="first-proj" class="expand"><img id="icon-first" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                             <p class="proj-text">
                                 A responsive portfolio site built for Lauchlan Craig, a freelance designer in Germany. Built with CSS Grid (with Flexbox fallback) for a neat structure and pixel-perfect gap. Simple.
@@ -76,7 +76,7 @@
                     </div>
                     <div class="project-text">
                         <p>Moon Digital<br> Personal Project</p>
-                        <span id="second-proj" href="#" class="expand"><img src="./plus.png"></span>
+                        <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
                                     Simple, single pager for a pretend Digital Agency. Built with Flexbox, modular SCSS and some React components sprinkled in.
