--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Add your site or application content here -->
 
     <div id="landing-hero" class="hero dark">
-        <h1 class="scrolling">Matthew Stobo is an <span class="highlight-word">aspiring web developer</span>, digital project manager and
+        <h1 class="scrolling">Matthew Stobo is a <span class="highlight-word">freelance web developer</span>, digital project manager and
             <span class="typed"></span>
         </h1>
         <a class="autoscroll" href="#">&darr; &nbsp; &darr;</a>
