--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav>
         <div class="navbar">
             <a href="#projects" id="#proj-nav">Projects</a>
-            <a href="#experience" id="#exp-nav">Experience</a>
+            <a href="#experience" id="#exp-nav">Services</a>
             <a href="#education" id="#edu-nav">Education</a>
             <a href="#skills" id="#skills-nav">Skills</a>
             <a href="#contact" id="#con-nav">Contact</a>
@@ -91,47 +91,45 @@
         <span id="experience" class="anchor"></span>
         <div class="content grey">
             <div class="left">
-                <h3>Matthew Stobo has the skills </h3>
-                <h3>Employment</h3>
+                <h3>Services </h3>
                 <p>
-                    Digital Producer<br/> Get Started<br/><br/> Technical project and account management. Responsible for
-                    management of digital projects and strategies from requirements gathering and analysis, to development
-                    and production. Highly autonomous role across multiple clients, projects and technologies.
+                  I am always open to taking on projects and clients in my spare time outside of my employment. <br><br>
+                  I can provide a wide range of digital services and skills - including development of a new site or improvements to your existing one, as well as digital consulting and project management. <br> <br>A list of services include:
+                </p>
+                <p class="list-p">
+                     Web Development<br>
+                      Solutions Consulting<br>
+                      SEO<br>
+                      Testing & QA<br>
                 </p>
             </div>
-            <div class="right">
+          <!--  <div class="right">
                 <p class="date">Feb 2016 - present.</p>
-            </div>
+            </div> -->
         </div>
-        <span id="education" class="anchor"></span>
+        <span id="skills" class="anchor"></span>
         <div class="content blue">
-            <h3>Education</h3>
-            <p class="date">Feb 2013 - Feb 2016</p>
-            <p>
-                Bachelor of Information Technology and Systems<br> Monash University<br><br> Major in Application Development,
-                minor in Information and Communication Technologies (ICT)
-            </p>
-            <p class="date">Mar 2010 - Jan 2012</p>
-            <p>
-                Bachelor of Arts (International Studies)<br> Deakin University<br><br> Major in International Relations,minor
-                in Middle Eastern Studies<br> (DEFERRED)
-                <br>
-            </p><br><br>
+                <h3>Skills & Technologies</h3>
+                <p>
+                    Languages​ ​/​ ​Methodologies<br><br> Java, C# , PHP, HTML5<br> Javascript, CSS3, SQL, Ruby
+                </p>
+    
+                <p> Libraries​ ​and​ ​Frameworks<br><br> ASP.NET Core, Android, CakePHP, Laravel, Selenium, jQuery, Cucumber / SpecFlow,
+                    MySQL
+                </p>
+                <p>Tools<br><br> Unix CLI, Nginx, Git, Webpack, Visual Studio, Docker, phpMyAdmin, LoadImpact
+                </p><br><br>
             <hr class="border edu" />
             <hr class="border skills" />
         </div>
-        <span id="skills" class="anchor"></span>
+        <span id="education" class="anchor"></span>
         <div class="content white">
-            <h3>Skills & Technologies</h3>
-            <p>
-                Languages​ ​/​ ​Methodologies<br><br> Java, C# , PHP, HTML5<br> Javascript, CSS3, SQL, Ruby
-            </p>
-
-            <p> Libraries​ ​and​ ​Frameworks<br><br> ASP.NET Core, Android, CakePHP, Laravel, Selenium, jQuery, Cucumber / SpecFlow,
-                MySQL
-            </p>
-            <p>Tools<br><br> Unix CLI, Nginx, Git, Webpack, Visual Studio, Docker, phpMyAdmin, LoadImpact
-            </p><br><br>
+                <h3>Education</h3>
+                <p class="date">Feb 2013 - Feb 2016</p>
+                <p>
+                    Bachelor of Information Technology and Systems<br> Monash University<br><br> Major in Application Development,
+                    minor in Information and Communication Technologies (ICT)
+                </p>
             <hr class="border foot" />
         </div>
         <span id="contact" class="anchor"></span>
