added skills icons, updated panel heights on mobile.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/css/normalize.css">
     <link rel="stylesheet" href="css/css/main.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:600" rel="stylesheet">
 </head>
 
@@ -89,7 +90,7 @@
             <hr class="border proj" />
         </div>
         <span id="experience" class="anchor"></span>
-        <div class="content grey">
+        <div id="services-panel" class="content grey">
             <div class="left">
                 <h3>Services </h3>
                 <p>
@@ -108,17 +109,28 @@
             </div> -->
         </div>
         <span id="skills" class="anchor"></span>
-        <div class="content blue">
+        <div id="icons-panel" class="content blue">
                 <h3>Skills & Technologies</h3>
-                <p>
-                    Languages​ ​/​ ​Methodologies<br><br> Java, C# , PHP, HTML5<br> Javascript, CSS3, SQL, Ruby
-                </p>
-    
-                <p> Libraries​ ​and​ ​Frameworks<br><br> ASP.NET Core, Android, CakePHP, Laravel, Selenium, jQuery, Cucumber / SpecFlow,
-                    MySQL
-                </p>
-                <p>Tools<br><br> Unix CLI, Nginx, Git, Webpack, Visual Studio, Docker, phpMyAdmin, LoadImpact
-                </p><br><br>
+                <div class="dev-icons">
+                    <ul>
+                        <li><i class="devicon-html5-plain"></i>
+                        </li>
+                        <li><i class="devicon-css3-plain-wordmark"></i>                        </li>
+                        <li><i class="devicon-javascript-plain"></i>
+                        </li>
+                        <li><i class="devicon-react-original"></i>
+                        </li>
+                        <li><i class="devicon-webpack-plain"></i>
+
+                        </li>
+                        <li><i class="devicon-sass-original"></i>
+                        </li>
+                        <li><i class="devicon-laravel-plain"></i>
+                        </li>
+                        <li><i class="devicon-php-plain"></i>
+                        </li>
+                    </ul>
+                </div>
             <hr class="border edu" />
             <hr class="border skills" />
         </div>
