Update projects to use rows

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/css/normalize.css">
-    <link rel="stylesheet" href="css/css/main.css">
+    <link rel="stylesheet" href="dist/main.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:600" rel="stylesheet">
 </head>
@@ -44,17 +44,19 @@
     </nav>
     <div class="wrapper">
         <div class="content blue">
-            <h3>Matthew Stobo is a cool guy
+            <h3>As a digital native..
             </h3>
             <p>
-                My passion is to solve technical problems. An aspiring developer and technical project manager with excellent communication
+                My passion is to solve technical problems.
+                <br><br>
+                 An aspiring developer and technical project manager with excellent communication
                 abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
             </p>
             <hr class="border" />
         </div>
         <span id="projects" class="anchor"></span>
         <div class="projects">
-            <h3>Matthew Stobo makes things happen</h3>
+            <h3>I can make things happen</h3>
             <div class="project-wrapper">
                 <div class="project-item">
                     <div class="project-image">
@@ -76,7 +78,37 @@
                         <img src="img/moon.png">
                     </div>
                     <div class="project-text">
-                        <p>Moon Digital<br> Personal Project</p>
+                        <p>Cumulus<br> Personal Project</p>
+                        <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
+                        <div class="proj-expand inactive">
+                                <p class="proj-text">
+                                    Simple, single pager for a pretend Digital Agency. Built with Flexbox, modular SCSS and some React components sprinkled in.
+                                </p>
+                                <button class="cta" href="http://www.mjstobo.com/moondigital">Visit Project</button>
+                            </div>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-image">
+                        <img src="img/moon.png">
+                    </div>
+                    <div class="project-text">
+                        <p>Daryl Digital</p>
+                        <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
+                        <div class="proj-expand inactive">
+                                <p class="proj-text">
+                                    Simple, single pager for a Daryl Digital. Built with Flexbox, modular SCSS and some React components sprinkled in.
+                                </p>
+                                <button class="cta" href="http://www.mjstobo.com/moondigital">Visit Project</button>
+                            </div>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-image">
+                        <img src="img/moon.png">
+                    </div>
+                    <div class="project-text">
+                        <p>Foodie<br> Personal Project</p>
                         <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
@@ -100,7 +132,7 @@
                 <p class="list-p">
                      Web Development<br>
                       Solutions Consulting<br>
-                      SEO<br>
+
                       Testing & QA<br>
                 </p>
             </div>
@@ -125,10 +157,7 @@
                         </li>
                         <li><i class="devicon-sass-original"></i>
                         </li>
-                        <li><i class="devicon-laravel-plain"></i>
-                        </li>
-                        <li><i class="devicon-php-plain"></i>
-                        </li>
+                      
                     </ul>
                 </div>
             <hr class="border edu" />
