--- a/index.html
+++ b/index.html
@@ -26,45 +26,35 @@
     <!-- Add your site or application content here -->
 
     <div id="landing-hero" class="hero dark">
-        <h1 class="scrolling">Matthew Stobo is a <span class="highlight-word">junior web developer</span>, digital project manager and
+        <h1 class="scrolling">My name is Matthew Stobo and I am  a <span class="highlight-word"><strong>Web Developer</strong></span>, digital project manager and
             <span class="typed"></span>
         </h1>
-        <a class="autoscroll" href="#">&darr; &nbsp; &darr;</a>
+        <a class="autoscroll" href="#">&darr; &nbsp; &darr; &nbsp; &darr;</a>
     </div>
     <nav>
-        <div class="navbar">
-            <a href="#projects" id="#proj-nav">Projects</a>
+     <div class="navbar">
+            <a href="#projects" id="#proj-nav">Portfolio</a>
             <a href="#education" id="#edu-nav">Education</a>
             <a href="#skills" id="#skills-nav">Skills</a>
-            <a href="#contact" id="#con-nav">Contact</a>
-            <span>:D</span>
+        <div class="icon-set">
+            <a href="mailto:mjstobo@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" class="icon"  viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"/></svg></a>
+            <a href="https://www.linkedin.com/in/mjstobo" target="_blank"><svg role="img" class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill='#000'><title>LinkedIn icon</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
+            <a href="https://www.github.com/mjstobo" target="_blank"><i class="devicon-github-plain icon"></i> </a>
         </div>
+     </div>
 
     </nav>
     <div class="wrapper">
         <div class="content blue">
-            <h3>As a digital native..
+            <h3>About me..
             </h3>
             <p>
-                My passion is to solve technical problems.
+                My dream job is to solve technical problems and build for the web. 
                 <br><br>
-                 An aspiring developer and technical project manager with excellent communication
-                abilities and project leadership experience; as comfortable in the meeting room as in front of a code editor.
+                I am Web Developer and Digital Project manager based in Melbourne, Australia with experience across the entire development lifecycle.
+                <br><br>
+                I'm passionate about the world of front-end development, with particular interests in the Javascript ecosystem and automated testing.
             </p>
-
-            <div id="icons-panel" class="content blue">
-                <div class="dev-icons contact-icons">
-                    <ul>
-                        <li><a href="mailto:mjstobo@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" class="icon"  viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"/></svg></a>
-                        </li>
-                        <li><a href="https://www.linkedin.com/in/mjstobo" target="_blank">
-                            <svg role="img" class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill='#000'><title>LinkedIn icon</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a></li>
-                        <li><a href="https://www.github.com/mjstobo" target="_blank"><i class="devicon-github-plain icon"></i> </a>
-                        </li>
-                  
-                    </ul>
-                </div>
-                </div>
             <hr class="border" />
         </div>
         <span id="projects" class="anchor"></span>
@@ -186,19 +176,7 @@
         </div>
         <span id="contact" class="anchor"></span>
         <footer class="footer">
-            <h3>Contact Me</h3>
-                <div class="dev-icons footer-icons">
-                        <ul>
-                                <li><a href="mailto:mjstobo@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" class="icon"  viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"/></svg></a>
-                                </li>
-                                <li><a href="https://www.linkedin.com/in/mjstobo" target="_blank">
-                                    <svg role="img" class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill='#000'><title>LinkedIn icon</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a></li>
-                                <li><a href="https://www.github.com/mjstobo" target="_blank"><i class="devicon-github-plain icon"></i> </a>
-                                </li>
-                          
-                            </ul>
-                </div>
-            <p class="copyright">Designed with love by<a href="http://www.lauchlancraig.com"> Studio Craig</a>, built by yours truly.</p>
+            <p class="copyright">Designed with love by<a href="https://www.lauchlancraig.com"> Studio Craig</a>, built by yours truly.</p>
         </footer>
     </div>
 
