Updated imagery and project copy / links

--- a/index.html
+++ b/index.html
@@ -78,46 +78,46 @@
                 </div>
                 <div class="project-item">
                     <div class="project-image">
-                        <img src="img/moon.png">
+                        <img src="img/cumulus.png">
                     </div>
                     <div class="project-text">
                         <p>Cumulus<br> Personal Project</p>
                         <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
-                                    Simple, single pager for a pretend Digital Agency. Built with Flexbox, modular SCSS and some React components sprinkled in.
+                                    A ReactJS based app that utilises the OpenWeatherMaps API to retrieve weather data. Paired with a NodeJS API for auto-completion and improved search results, this project was a means to explore the JavaScript ecosystem!
                                 </p>
-                                <button class="cta" href="https://www.mjstobo.com/moondigital">Visit Project</button>
+                                <button class="cta" href="https://github.com/mjstobo/cumulus-app">View Code</button>
                             </div>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-image">
-                        <img src="img/moon.png">
+                        <img src="img/daryl2.png">
                     </div>
                     <div class="project-text">
                         <p>Daryl Digital</p>
                         <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
-                                    Simple, single pager for a Daryl Digital. Built with Flexbox, modular SCSS and some React components sprinkled in.
+                                    Darly Digital is a collective of digital experts doing work for good people. This agency website was built with React for it's component oriented, UI runtime approach. A sprinkling of modular SCSS has set the project up for easy, long term maintenance and expansion.
                                 </p>
-                                <button class="cta" href="https://www.mjstobo.com/moondigital">Visit Project</button>
+                                <button class="cta" href="https://daryl.digital">Visit Project</button>
                             </div>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-image">
-                        <img src="img/moon.png">
+                        <img src="img/foodie.png">
                     </div>
                     <div class="project-text">
                         <p>Foodie<br> Personal Project</p>
                         <span id="second-proj" href="#" class="expand"><img id="icon-second" src="./plus.png"></span>
                         <div class="proj-expand inactive">
                                 <p class="proj-text">
-                                    Simple, single pager for a pretend Digital Agency. Built with Flexbox, modular SCSS and some React components sprinkled in.
+                                    A ReactJS app for the searching and filtering of London based restaurants. 
                                 </p>
-                                <button class="cta" href="http://www.mjstobo.com/moondigital">Visit Project</button>
+                                <button class="cta" href="https://github.com/mjstobo/foodie">View Code</button>
                             </div>
                     </div>
                 </div>
@@ -172,6 +172,14 @@
                     Bachelor of Information Technology and Systems<br> Monash University<br><br> Major in Application Development,
                     minor in Information and Communication Technologies (ICT)
                 </p>
+
+                <h3>Experience</h3>
+                <p class="date">Feb 2016 - present</p>
+                <p>
+                    Digital Producer at www.luminary.com <br/><br/> 
+                    Responsible for the scoping and delivery of digital projects, solutions consulting and supporting development teams.
+                </p>
+
             <hr class="border foot" />
         </div>
         <span id="contact" class="anchor"></span>
